# cocotola-1.21

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  cloudbuild.yaml  codecov.yml  go.mod  go.sum  go.work  go.work.sum
.github/: .golangci.yml  pkgforbid.yml
.github/workflows/: build.yml  reviewdog.yml  test.yml
cocotola-api/: go.mod  go.sum
cocotola-api/src/: BUILD.bazel  main.go
cocotola-api/src/app/config/: BUILD.bazel
cocotola-api/src/app/controller/gin/: BUILD.bazel  app_router.go  private_workbook_handler.go
cocotola-api/src/app/controller/gin/middleware/: BUILD.bazel  auth_middleware.go  init.go  tracelog_middleware.go
cocotola-api/src/app/domain/: BUILD.bazel  lang_s_test.go  lang_test.go
cocotola-api/src/app/gateway/: BUILD.bazel  repository_factory.go  transaction_manager.go
cocotola-api/src/app/service/: BUILD.bazel  repository_factory.go  service.go  service_s_test.go  service_test.go
cocotola-api/src/app/usecase/student/: BUILD.bazel  student_usecase_workbook.go
cocotola-api/src/log/: BUILD.bazel
cocotola-api/src/sqls/: BUILD.bazel
cocotola-app/: .gitignore  Dockerfile  fly.toml  go.mod  go.sum  index.html
cocotola-app/src/: BUILD.bazel  main.go
cocotola-app/src/auth/: BUILD.bazel  auth.go
cocotola-app/src/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-app/src/web_dist/: index.html
cocotola-app/src/web_dist/assets/: ContentLayout-Bt_Fet3b.js  ContentLayout-HhiIkBvQ.js  ContentLayout-JdoTQ64M.js  index-8jhUgN0_.js  index-BjyI31TE.js  index-D-hDkXrp.js  index-FCwGrJwA.js  index-GJpclJhO.js  index-Jt6jM7Jc.js  index-V8A9tv5B.css  index-VRpfH8Z-.js  index-XKwBls5O.js  index-ZhX54wFw.js  index-h6Czi1EM.js  index-lDcNi8Od.js  index-uWvz_pcF.js  index-vHDdjwiG.js  index-vgyWVxGM.css  index-x3g0Rid2.js  index-xhyOiQ_r.js  index-zl_dSVzC.js
cocotola-auth/: .mockery.yaml  go.mod  go.sum
cocotola-auth/src/: BUILD.bazel  main.go
cocotola-auth/src/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-auth/src/controller/gin/: BUILD.bazel  app_router.go  auth.go  auth_handler.go  auth_handler_s_test.go  auth_handler_test.go  google_auth.go  google_auth_handler.go  google_auth_handler_s_test.go  helper_test.go  init.go  password_auth_handler.go  rback_handler.go
cocotola-auth/src/controller/gin/middleware/: BUILD.bazel  auth_middleware.go  tracelog_middleware.go  wait_middleware.go
cocotola-auth/src/controller/gin/mocks/: AuthenticationInterface.go  AuthenticationUsecaseInterface.go  BUILD.bazel  GoogleUserUsecaseInterface.go
cocotola-auth/src/domain/: BUILD.bazel
cocotola-auth/src/gateway/: BUILD.bazel  auth_token_manager.go  auth_token_manager_s_test.go  google_auth_client.go  google_auth_client_s_test.go  helper_test.go  init.go  repository_factory.go  transaction_manager.go
cocotola-auth/src/gateway/mocks/: BUILD.bazel  HTTPClient.go
cocotola-auth/src/initialize/: BUILD.bazel  init.go  initialize.go
cocotola-auth/src/service/: BUILD.bazel  auth_token_manager.go  repository_factory.go
cocotola-auth/src/usecase/: BUILD.bazel  authentication_usecase.go  google_user_usecase.go  init.go  password_usecase.go  rbac_usecase.go
cocotola-core/: .mockery.yaml  Makefile  go.mod  go.sum
cocotola-core/scripts/: reset-test.sh
cocotola-core/src/: BUILD.bazel  main.go
cocotola-core/src/app/gateway/: BUILD.bazel  cocotola_auth_client.go  repository_factory.go  transaction_manager.go
cocotola-core/src/controller/gin/: BUILD.bazel  app_router.go  private_workbook_handler.go  workbook_handler.go  workbook_handler_s_test.go
cocotola-core/src/controller/gin/helper/: BUILD.bazel  auth_helper.go  init.go  path_helper.go
cocotola-core/src/controller/gin/middleware/: BUILD.bazel  auth_middleware.go  init.go
cocotola-core/src/controller/gin/mocks/: BUILD.bazel  WorkbookCommandUsecase.go  WorkbookQueryUsecase.go  WorkbookUsecaseInterface.go
cocotola-core/src/domain/: BUILD.bazel  lang_s_test.go
cocotola-core/src/domain/workbookadd/: BUILD.bazel  workbook.go
cocotola-core/src/domain/workbookfind/: BUILD.bazel  wokrbook.go
cocotola-core/src/domain/workbookretrieve/: BUILD.bazel  wokrbook.go
cocotola-core/src/gateway/: BUILD.bazel  cocotola_auth_client.go  init.go  repository_factory.go  transaction_manager.go  workbook_repository.go  workbook_repository_test.go
cocotola-core/src/gateway/usecase/student/: BUILD.bazel  workbook_query_service.go
cocotola-core/src/initialize/: BUILD.bazel  init.go  initialize.go
cocotola-core/src/service/: BUILD.bazel  cocotola_auth_client.go  service_s_test.go  workbook_repository.go
cocotola-core/src/service/mocks/: BUILD.bazel  CocotolaAuthClient.go
cocotola-core/tools/convert1/: BUILD.bazel  main.go
cocotola-core/tools/import1/: BUILD.bazel  main.go
cocotola-synthesizer/: .mockery.yaml  go.mod  go.sum
cocotola-synthesizer/src/: BUILD.bazel  main.go
cocotola-synthesizer/src/domain/: BUILD.bazel  audio.go
cocotola-synthesizer/src/gateway/: BUILD.bazel  audio_file.go  audio_repository.go  google_tts_client.go  google_tts_client_test.go  init.go  repository_factory.go  transaction_manager.go
cocotola-synthesizer/src/initialize/: BUILD.bazel  initialize.go
cocotola-synthesizer/src/service/: BUILD.bazel  audio_repository.go  synthesizer_client.go
cocotola-synthesizer/src/sqls/: BUILD.bazel
cocotola-synthesizer/src/sqls/mysql/: 2021020101_create_audio.up.sql
cocotola-synthesizer/src/sqls/postgres/: 2021020101_create_audio.up.sql
cocotola-synthesizer/src/usecase/: BUILD.bazel  init.go  synthesizer_usecase.go
cocotola-web/: .env.development  .env.production  .eslintrc.yml  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
cocotola-web/src/: App.css  App.tsx  index.css  main.tsx
docker/development/: docker-compose.yml
lib/: go.mod  go.sum
lib/controller/gin/: BUILD.bazel  server.go
lib/controller/gin/middleware/: BUILD.bazel  init.go  tracelog_middleware.go
proto/: BUILD.bazel  go.mod  go.sum  helloworld.pb.go  helloworld.proto
scripts/: lint.sh
(+115 files in other folders)
