load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-api/src",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-api/src/app/domain",
        "//cocotola-api/src/app/service",
        "//proto",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

# Put app go_binary into a tar layer.
pkg_tar(
    name = "app_layer",
    srcs = [":src"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/src"],
    tars = [":app_layer"],
)

oci_tarball(
    name = "tarball",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["gcr.io/cocotola:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "asia.gcr.io/cocotola-001/cocotola-api",
    # repository = "pecolynx/cocotola",
)

# load("@container_structure_test//:defs.bzl", "container_structure_test")

# container_structure_test(
#     name = "hello_test",
#     configs = ["testdata/hello.yaml"],
#     image = ":hello",
# )
