load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_oci//oci:pull.bzl", "oci_pull")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "web_dist/assets/index-V8A9tv5B.css",
        "web_dist/assets/index-h6Czi1EM.js",
        "web_dist/assets/react-h3aPdYU7.svg",
        "web_dist/index.html",
        "web_dist/vite.svg",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-app/src",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

# Put app go_binary into a tar layer.
pkg_tar(
    name = "app_layer",
    srcs = [":src"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/src"],
    tars = [":app_layer"],
)

oci_tarball(
    name = "tarball",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["asia.gcr.io/cocotola-001/cocotola-app:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "asia.gcr.io/cocotola-001/cocotola-ap",
)

oci_push(
    name = "push1",
    image = ":image",
    remote_tags = ":stamped",
    repository = "asia.gcr.io/cocotola-001/cocotola-app",
)
