load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src",
    visibility = ["//visibility:private"],
    deps = ["//cocotola-auth/src/usecase"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

# Put app go_binary into a tar layer.
pkg_tar(
    name = "app_layer",
    srcs = [":src"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/src"],
    tars = [":app_layer"],
)

oci_tarball(
    name = "tarball",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["asia.gcr.io/cocotola-001/cocotola-auth:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "asia.gcr.io/cocotola-001/cocotola-auth",
    # repository = "pecolynx/cocotola",
)
