load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-api/src/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/log",
    ],
)
