load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-app/src/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/gateway",
        "//cocotola-auth/src/initialize",
        "//cocotola-auth/src/service",
        "//cocotola-auth/src/usecase",
        "//lib/log",
        "//proto",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_kujilabo_redstart//user/gateway",
        "@io_gorm_gorm//:gorm",
    ],
)
