load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = [
        "local.yml",
        "production.yml",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kujilabo_redstart//lib/config",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
