load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "auth_token_manager.go",
        "google_auth_client.go",
        "init.go",
        "repository_factory.go",
        "state_repository.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/domain",
        "//cocotola-auth/src/service",
        "//lib/log",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_google_uuid//:uuid",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/gateway",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_kujilabo_redstart//user/gateway",
        "@com_github_kujilabo_redstart//user/service",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = [
        "auth_token_manager_s_test.go",
        "google_auth_client_s_test.go",
        "helper_test.go",
    ],
    deps = [
        ":gateway",
        "//cocotola-auth/src/domain",
        "//cocotola-auth/src/gateway/mocks",
        "//cocotola-auth/src/service",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "gateway_s_test",
    size = "small",
    srcs = [
        "auth_token_manager_s_test.go",
        "google_auth_client_s_test.go",
        "helper_test.go",
    ],
    gotags = ["small"],
    deps = [
        ":gateway",
        "//cocotola-auth/src/domain",
        "//cocotola-auth/src/gateway/mocks",
        "//cocotola-auth/src/service",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
