load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "auth_token_manager.go",
        "repository_factory.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/domain",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_kujilabo_redstart//user/service",
    ],
)
