load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "authentication_usecase.go",
        "google_user_usecase.go",
        "init.go",
        "password_usecase.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/domain",
        "//cocotola-auth/src/service",
        "//lib/log",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_kujilabo_redstart//user/service",
    ],
)
