load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "cocotola_auth_client.go",
        "init.go",
        "repository_factory.go",
        "transaction_manager.go",
        "workbook_repository.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/service",
        "//lib/api",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/gateway",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["workbook_repository_test.go"],
    deps = [
        ":gateway",
        "@com_github_stretchr_testify//require",
    ],
)
