load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/config",
        "//cocotola-core/src/controller/gin",
        "//cocotola-core/src/controller/gin/middleware",
        "//cocotola-core/src/gateway",
        "//cocotola-core/src/gateway/usecase/student",
        "//cocotola-core/src/service",
        "//cocotola-core/src/usecase/student",
        "//lib/config",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//lib/config",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)
