load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "cocotola_auth_client.go",
        "repository_factory.go",
        "service.go",
        "transaction_manager.go",
        "workbook_repository.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/domain",
        "//lib/api",
        "@com_github_kujilabo_redstart//user/domain",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_s_test.go"],
    deps = [":service"],
)

go_test(
    name = "service_s_test",
    size = "small",
    srcs = ["service_s_test.go"],
    gotags = ["small"],
    deps = [":service"],
)
