load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "covert1_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/tools/covert1",
    visibility = ["//visibility:private"],
    deps = ["//lib/api"],
)

go_binary(
    name = "covert1",
    embed = [":convert1_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "convert1_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/tools/convert1",
    visibility = ["//visibility:private"],
    deps = ["//lib/api"],
)
