load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "init.go",
        "synthesizer_usecase.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-synthesizer/src/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer/src/domain",
        "//cocotola-synthesizer/src/service",
        "//lib/domain",
        "//lib/log",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/log",
    ],
)
