load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "repository_factory.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-api/src/app/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-api/src/app/service",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@io_gorm_gorm//:gorm",
    ],
)
