load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "repository_factory.go",
        "service.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-api/src/app/service",
    visibility = ["//visibility:public"],
)

go_test(
    name = "service_test",
    srcs = ["service_s_test.go"],
    deps = [":service"],
)

go_test(
    name = "service_s_test",
    size = "small",
    srcs = ["service_s_test.go"],
    gotags = ["small"],
    deps = [":service"],
)
