load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gin",
    srcs = [
        "app_router.go",
        "auth.go",
        "auth_handler.go",
        "google_auth.go",
        "google_auth_handler.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/service",
        "//lib/log",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//lib/log",
    ],
)
