load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gin",
    srcs = [
        "app_router.go",
        "auth.go",
        "auth_handler.go",
        "google_auth_handler.go",
        "password_auth_handler.go",
        "user_handler.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-auth/src/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/src/domain",
        "//lib/api",
        "//lib/config",
        "//lib/controller/gin/middleware",
        "//lib/log",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_samber_slog_gin//:slog-gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)

go_test(
    name = "gin_test",
    srcs = [
        "auth_handler_s_test.go",
        "google_auth_handler_s_test.go",
        "helper_test.go",
    ],
    deps = [
        ":gin",
        "//cocotola-auth/src/config",
        "//cocotola-auth/src/controller/gin/mocks",
        "//cocotola-auth/src/domain",
        "//lib/config",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_ohler55_ojg//jp",
        "@com_github_ohler55_ojg//oj",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "gin_s_test",
    size = "small",
    srcs = [
        "auth_handler_s_test.go",
        "google_auth_handler_s_test.go",
        "helper_test.go",
    ],
    gotags = ["small"],
    deps = [
        ":gin",
        "//cocotola-auth/src/config",
        "//cocotola-auth/src/controller/gin/mocks",
        "//cocotola-auth/src/domain",
        "//lib/config",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_ohler55_ojg//jp",
        "@com_github_ohler55_ojg//oj",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
