load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "cocotola_auth_client.go",
        "repository_factory.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/app/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/app/service",
        "//lib/api",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/gateway",
        "@io_gorm_gorm//:gorm",
    ],
)
